--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,3 +1,8 @@
+html, body {
+  margin:0;
+  padding: 0;
+  width: 100%;
+}
 .login-label{
     color: white;
     margin-right: 5px;
@@ -16,7 +21,7 @@
     position: relative;
     width: 100%;
     display: flex;
-    margin-bottom: 6px;
+    margin-bottom: 10px;
     font-family: sans-serif;
   }
   
@@ -26,7 +31,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    margin-bottom: 7rem;
   }
   
   #login-form-header{
@@ -45,16 +50,21 @@
     left: 50%;
     transform: translateX(-50%);
     width: 100px;
-    margin-top: 20px;
+    margin: 25px 0px;
     cursor: pointer;
+    background-color: #edac1a;
+    border: none;
+    border-radius: 25px;
+    padding: 5px;
+    color: #3b4d96;
   }
   
   #login-header{
-    position: relative;
-    margin-bottom: 30px;
-    color: blue;
+    color: #3b4d96;
     font-size: 50px;
     font-family: sans-serif;
+    margin-bottom: 5rem;
+    margin-top: 5rem;
   }
   
   #login-form-container{
@@ -62,12 +72,10 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: rgba(2, 9, 104, 0.7);
-    border-radius: 50px;
-    border: 4px solid rgba(0, 0, 0, .25);
-    height: 200px;
+    background-color:#3b4d96;
+    border-radius: 25px;
     margin-bottom: 80px;
-    width: 500px;
+    min-width: 500px;
   }
   
   .login-error-msg{
