--- a/src/css/ChatList.css
+++ b/src/css/ChatList.css
@@ -1,5 +1,5 @@
 .chat {
-    background-color: #b3b3ff;
+    background-color: white;
     border: 5px #3b4d96 solid;
     border-radius: 20px;
     width: 500px;
@@ -7,8 +7,7 @@
 }
 
 .chat:hover {
-    background-color: white;
-    border-color: #007bff;
+    border-color:  #edac1a;
 }
 
 
@@ -22,5 +21,5 @@ p {
 }
 
 .check {
-    margin-left: 15px;
+    margin-left: 150px;
 }
